doc: Fix layout cut off on large screens
Extend the content's box across the whole screen so that
the layout isn't just cut-off on the right.

--- a/docs/ldoc.css
+++ b/docs/ldoc.css
@@ -120,6 +120,7 @@ kbd, p code, ol code {
 }
 
 #content {
+    width: 100%;
     overflow: hidden;
 }
 
